assets/css/main.css
/* ... */
    
            .icon-ai:before {
                line-height: inherit;
            }
    
            .icon-ai > .label {
                display: none;
            }

/* Nav */

	#nav {
		text-align: center;
		height: 3.5em;
		cursor: default;
	}

		#nav a {
			position: relative;
			display: inline-block;
			color: #f0f0f0;
			width: 1em;
			height: 1em;
			line-height: 0.9em;
			font-size: 2em;
			margin: 0 0.4em 0 0.4em;
			opacity: 0.35;
			outline: 0;
			-moz-transition: opacity .25s ease-in-out;
			-webkit-transition: opacity .25s ease-in-out;
			-ms-transition: opacity .25s ease-in-out;
			transition: opacity .25s ease-in-out;
		}

			#nav a.icon:before {
				padding-right: 0;
			}

			#nav a:before {
				font-size: 0.8em;
			}

			#nav a.active:after {
				content: '';
				display: block;
				position: absolute;
				left: 50%;
				bottom: -0.2em; /* Adjust the vertical position as needed */
				
				width: 0.8em; /* Adjust the line's width as needed */
				height: 0.075em; /* Adjust the line's height as needed */
				background-color: rgba(255, 255, 255, 0.7); /* Color of the line */
				border-radius: 14%; /* Makes it a rounded line */
				-moz-transition: background-color .25s ease-in-out;
				-webkit-transition: background-color .25s ease-in-out;
				-ms-transition: background-color .25s ease-in-out;
				transition: background-color .25s ease-in-out;
				transform: translateX(-47%); /* Center the line horizontally */
			}
			
			

			#nav a span {
				display: block;
				position: absolute;
				background: #222222;
				color: #f0f0f0;
				top: -3em;
				font-size: 0.5em;
				height: 2.25em;
				line-height: 2.25em;
				left: 50%;
				opacity: 0;
				-moz-transition: opacity .25s ease-in-out;
				-webkit-transition: opacity .25s ease-in-out;
				-ms-transition: opacity .25s ease-in-out;
				transition: opacity .25s ease-in-out;
				width: 5.5em;
				margin-left: -2.75em;
			}

				#nav a span:after {
					content: '';
					display: block;
					position: absolute;
					bottom: -0.4em;
					left: 50%;
					margin-left: -0.6em;
					border-top: solid 0.6em #222222;
					border-left: solid 0.6em transparent;
					border-right: solid 0.6em transparent;
				}

			#nav a:hover {
				opacity: 1.0;
			}

				#nav a:hover span {
					opacity: 1.0;
				}

			#nav a.active {
				opacity: 1.0;
			}

				#nav a.active:after {
					border-bottom-width: 0.5em;
				}

		@media screen and (max-width: 736px) {

			#nav a span {
				display: none;
			}

		}

/* Wrapper */

	#wrapper {
		width: 60em;
		margin: 0 auto;
		min-height: 100vh;
		max-width: 100%;
		padding: 4em 0;
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-flex-direction: column;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
		flex-direction: column;
		-moz-align-items: center;
		-webkit-align-items: center;
		-ms-align-items: center;
		align-items: center;
		-moz-justify-content: center;
		-webkit-justify-content: center;
		-ms-justify-content: center;
		justify-content: center;
		-moz-transition: opacity 1s ease-in-out;
		-webkit-transition: opacity 1s ease-in-out;
		-ms-transition: opacity 1s ease-in-out;
		transition: opacity 1s ease-in-out;
	}

		body.is-preload #wrapper {
			opacity: 0;
		}

		@media screen and (max-width: 1280px) {

			#wrapper {
				padding: 3em 0;
				max-width: calc(100% - 6em);
			}

		}

		@media screen and (max-width: 980px) {

			#wrapper {
				padding: 2em 0;
				max-width: calc(100% - 8em);
			}

		}

		@media screen and (max-width: 736px) {

			#wrapper {
				padding: 1em 0;
				max-width: calc(100% - 2em);
			}

		}

		@media screen and (max-width: 360px) {

			#wrapper {
				padding: 1em 0;
				max-width: 100%;
			}

		}

/* Main */

	#main {
		position: relative;
		overflow: hidden;
		width: 100%;
		backdrop-filter: blur(0.2rem);
		background: rgba(36, 36, 48, 0.7); /*#ffffff;*/
		/* box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.25); */
		-moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
		-webkit-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
		-ms-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
		transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
	}

		#main > .panel {
			
			-moz-transition: opacity 0.25s ease-in-out;
			-webkit-transition: opacity 0.25s ease-in-out;
			-ms-transition: opacity 0.25s ease-in-out;
			transition: opacity 0.25s ease-in-out;
			margin-bottom: 0;
			position: relative;
			padding: 3.5em 2.5em 2.5em 2.5em;
			width: 100%;
		}

			#main > .panel.inactive {
				opacity: 0;
			}

			@media screen and (max-width: 736px) {

				#main > .panel {
					padding: 2em 1.5em 1.5em 1.5em;
				}

			}

			#main > .panel.intro {
				padding: 0;
				height: 20em;
				display: -moz-flex;
				display: -webkit-flex;
				display: -ms-flex;
				display: flex;
				-moz-flex-direction: row;
				-webkit-flex-direction: row;
				-ms-flex-direction: row;
				flex-direction: row;
				-moz-align-items: center;
				-webkit-align-items: center;
				-ms-align-items: center;
				align-items: center;
			}

				#main > .panel.intro .pic {
					text-decoration: none;
					position: relative;
					-moz-flex-grow: 0;
					-webkit-flex-grow: 0;
					-ms-flex-grow: 0;
					flex-grow: 0;
					-moz-flex-shrink: 0;
					-webkit-flex-shrink: 0;
					-ms-flex-shrink: 0;
					flex-shrink: 0;
					width: 17em;
					height: 100%;
				}

					#main > .panel.intro .pic:before {
						content: '';
						position: absolute;
						top: 0;
						left: 0;
						background: transparent;
						width: 100%;
						height: 100%;
						z-index: 1;
					}
/* ... */

